Compilateur/interpreter/src/simulator.output
Grammaire

    0 $accept: File $end

    1 File: Instructions

    2 Instructions: %empty
    3             | Instructions Instruction

    4 Instruction: tADD tNB tNB tNB
    5            | tMUL tNB tNB tNB
    6            | tSOU tNB tNB tNB
    7            | tDIV tNB tNB tNB
    8            | tCOP tNB tNB
    9            | tAFC tNB tNB
   10            | tJMP tNB
   11            | tJMF tNB
   12            | tJMT tNB
   13            | tINF tNB tNB tNB
   14            | tINE tNB tNB tNB
   15            | tSUE tNB tNB tNB
   16            | tDIF tNB tNB tNB
   17            | tNOT tNB tNB tNB
   18            | tSUP tNB tNB tNB
   19            | tCMP tNB tNB tNB
   20            | tPRI tNB
   21            | tRET tNB


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tADD (258) 4
tMUL (259) 5
tSOU (260) 6
tDIV (261) 7
tCOP (262) 8
tAFC (263) 9
tJMP (264) 10
tJMF (265) 11
tINF (266) 13
tSUP (267) 18
tCMP (268) 19
tSUE (269) 15
tINE (270) 14
tDIF (271) 16
tNOT (272) 17
tPRI (273) 20
tRET (274) 21
tJMT (275) 12
tNB (276) 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21


Non-terminaux, suivis des règles où ils apparaissent

$accept (22)
    à gauche: 0
File (23)
    à gauche: 1, à droite: 0
Instructions (24)
    à gauche: 2 3, à droite: 1 3
Instruction (25)
    à gauche: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21, à droite:
    3


État 0

    0 $accept: . File $end

    $défaut  réduction par utilisation de la règle 2 (Instructions)

    File          aller à l'état 1
    Instructions  aller à l'état 2


État 1

    0 $accept: File . $end

    $end  décalage et aller à l'état 3


État 2

    1 File: Instructions .
    3 Instructions: Instructions . Instruction

    tADD  décalage et aller à l'état 4
    tMUL  décalage et aller à l'état 5
    tSOU  décalage et aller à l'état 6
    tDIV  décalage et aller à l'état 7
    tCOP  décalage et aller à l'état 8
    tAFC  décalage et aller à l'état 9
    tJMP  décalage et aller à l'état 10
    tJMF  décalage et aller à l'état 11
    tINF  décalage et aller à l'état 12
    tSUP  décalage et aller à l'état 13
    tCMP  décalage et aller à l'état 14
    tSUE  décalage et aller à l'état 15
    tINE  décalage et aller à l'état 16
    tDIF  décalage et aller à l'état 17
    tNOT  décalage et aller à l'état 18
    tPRI  décalage et aller à l'état 19
    tRET  décalage et aller à l'état 20
    tJMT  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 1 (File)

    Instruction  aller à l'état 22


État 3

    0 $accept: File $end .

    $défaut  accepter


État 4

    4 Instruction: tADD . tNB tNB tNB

    tNB  décalage et aller à l'état 23


État 5

    5 Instruction: tMUL . tNB tNB tNB

    tNB  décalage et aller à l'état 24


État 6

    6 Instruction: tSOU . tNB tNB tNB

    tNB  décalage et aller à l'état 25


État 7

    7 Instruction: tDIV . tNB tNB tNB

    tNB  décalage et aller à l'état 26


État 8

    8 Instruction: tCOP . tNB tNB

    tNB  décalage et aller à l'état 27


État 9

    9 Instruction: tAFC . tNB tNB

    tNB  décalage et aller à l'état 28


État 10

   10 Instruction: tJMP . tNB

    tNB  décalage et aller à l'état 29


État 11

   11 Instruction: tJMF . tNB

    tNB  décalage et aller à l'état 30


État 12

   13 Instruction: tINF . tNB tNB tNB

    tNB  décalage et aller à l'état 31


État 13

   18 Instruction: tSUP . tNB tNB tNB

    tNB  décalage et aller à l'état 32


État 14

   19 Instruction: tCMP . tNB tNB tNB

    tNB  décalage et aller à l'état 33


État 15

   15 Instruction: tSUE . tNB tNB tNB

    tNB  décalage et aller à l'état 34


État 16

   14 Instruction: tINE . tNB tNB tNB

    tNB  décalage et aller à l'état 35


État 17

   16 Instruction: tDIF . tNB tNB tNB

    tNB  décalage et aller à l'état 36


État 18

   17 Instruction: tNOT . tNB tNB tNB

    tNB  décalage et aller à l'état 37


État 19

   20 Instruction: tPRI . tNB

    tNB  décalage et aller à l'état 38


État 20

   21 Instruction: tRET . tNB

    tNB  décalage et aller à l'état 39


État 21

   12 Instruction: tJMT . tNB

    tNB  décalage et aller à l'état 40


État 22

    3 Instructions: Instructions Instruction .

    $défaut  réduction par utilisation de la règle 3 (Instructions)


État 23

    4 Instruction: tADD tNB . tNB tNB

    tNB  décalage et aller à l'état 41


État 24

    5 Instruction: tMUL tNB . tNB tNB

    tNB  décalage et aller à l'état 42


État 25

    6 Instruction: tSOU tNB . tNB tNB

    tNB  décalage et aller à l'état 43


État 26

    7 Instruction: tDIV tNB . tNB tNB

    tNB  décalage et aller à l'état 44


État 27

    8 Instruction: tCOP tNB . tNB

    tNB  décalage et aller à l'état 45


État 28

    9 Instruction: tAFC tNB . tNB

    tNB  décalage et aller à l'état 46


État 29

   10 Instruction: tJMP tNB .

    $défaut  réduction par utilisation de la règle 10 (Instruction)


État 30

   11 Instruction: tJMF tNB .

    $défaut  réduction par utilisation de la règle 11 (Instruction)


État 31

   13 Instruction: tINF tNB . tNB tNB

    tNB  décalage et aller à l'état 47


État 32

   18 Instruction: tSUP tNB . tNB tNB

    tNB  décalage et aller à l'état 48


État 33

   19 Instruction: tCMP tNB . tNB tNB

    tNB  décalage et aller à l'état 49


État 34

   15 Instruction: tSUE tNB . tNB tNB

    tNB  décalage et aller à l'état 50


État 35

   14 Instruction: tINE tNB . tNB tNB

    tNB  décalage et aller à l'état 51


État 36

   16 Instruction: tDIF tNB . tNB tNB

    tNB  décalage et aller à l'état 52


État 37

   17 Instruction: tNOT tNB . tNB tNB

    tNB  décalage et aller à l'état 53


État 38

   20 Instruction: tPRI tNB .

    $défaut  réduction par utilisation de la règle 20 (Instruction)


État 39

   21 Instruction: tRET tNB .

    $défaut  réduction par utilisation de la règle 21 (Instruction)


État 40

   12 Instruction: tJMT tNB .

    $défaut  réduction par utilisation de la règle 12 (Instruction)


État 41

    4 Instruction: tADD tNB tNB . tNB

    tNB  décalage et aller à l'état 54


État 42

    5 Instruction: tMUL tNB tNB . tNB

    tNB  décalage et aller à l'état 55


État 43

    6 Instruction: tSOU tNB tNB . tNB

    tNB  décalage et aller à l'état 56


État 44

    7 Instruction: tDIV tNB tNB . tNB

    tNB  décalage et aller à l'état 57


État 45

    8 Instruction: tCOP tNB tNB .

    $défaut  réduction par utilisation de la règle 8 (Instruction)


État 46

    9 Instruction: tAFC tNB tNB .

    $défaut  réduction par utilisation de la règle 9 (Instruction)


État 47

   13 Instruction: tINF tNB tNB . tNB

    tNB  décalage et aller à l'état 58


État 48

   18 Instruction: tSUP tNB tNB . tNB

    tNB  décalage et aller à l'état 59


État 49

   19 Instruction: tCMP tNB tNB . tNB

    tNB  décalage et aller à l'état 60


État 50

   15 Instruction: tSUE tNB tNB . tNB

    tNB  décalage et aller à l'état 61


État 51

   14 Instruction: tINE tNB tNB . tNB

    tNB  décalage et aller à l'état 62


État 52

   16 Instruction: tDIF tNB tNB . tNB

    tNB  décalage et aller à l'état 63


État 53

   17 Instruction: tNOT tNB tNB . tNB

    tNB  décalage et aller à l'état 64


État 54

    4 Instruction: tADD tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 4 (Instruction)


État 55

    5 Instruction: tMUL tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 5 (Instruction)


État 56

    6 Instruction: tSOU tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 6 (Instruction)


État 57

    7 Instruction: tDIV tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 7 (Instruction)


État 58

   13 Instruction: tINF tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 13 (Instruction)


État 59

   18 Instruction: tSUP tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 18 (Instruction)


État 60

   19 Instruction: tCMP tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 19 (Instruction)


État 61

   15 Instruction: tSUE tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 15 (Instruction)


État 62

   14 Instruction: tINE tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 14 (Instruction)


État 63

   16 Instruction: tDIF tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 16 (Instruction)


État 64

   17 Instruction: tNOT tNB tNB tNB .

    $défaut  réduction par utilisation de la règle 17 (Instruction)
